# api-test

./: .env.dev  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/modules/users/: controller.py  crud.py  models.py  schemas.py
